# todos-app

./: .prettierrc.json  README.md  jsconfig.json  nuxt.config.js  package.json  rollup.config.js  svelte.config.js  tailwind.config.js  tsconfig.json
.github/workflows/: publish.yml
@types/: vue-idb.d.ts
components/: DisplayCounts.vue  List.vue  NewItem.vue
components/icons/: CheckboxIcon.vue  PlusIcon.vue  TrashIcon.vue
components/svg/: CheckboxSvg.vue  PlusSvg.vue  TrashSvg.vue
cypress/integration/: todos.spec.js
hooks/: useTodoList.ts
layouts/: default.vue
pages/: index.vue
plugins/: vue-idb.client.ts
public/: index.tauri.html
scripts/netlify/: build.js  netlify.toml
scripts/now/api/: ssr.js
src/: App.svelte  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  main.rs  models.rs
src/components/: DisplayCounts.svelte  List.svelte  NewItem.svelte
src/components/icons/: CheckboxIcon.svelte  PlusIcon.svelte  TrashIcon.svelte
src/models/: Todo.ts
src/pages/: _fallback.svelte  _layout.svelte  index.svelte
src/services/: Storage.js  Storage.ts
src/stores/: todos.js  todos.ts
static/: __index.html
stores/client/: todos.ts
test/: composition-helper.js
test/cypress/: tsconfig.json
test/cypress/integration/: sample.spec.js
test/unit/: DisplayCounts.spec.js  List.spec.js  NewItem.spec.js
