[package]
name = "todos-app"
version = "1.0.0"
description = "Handy TODOs app!"
authors = [ "Parker McMullin <parker.mcmullin01@gmail.com>" ]
license = ""
repository = "https://github.com/parker-codes/todos-app"
default-run = "todos-app"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0.56"
serde = { version = "1.0.114", features = [ "derive" ] }
tauri = { version = "0.7.0", features = [ "all-api" ] }
jfs = "0.6.2"
uuid = "0.8.1"

[target."cfg(windows)".build-dependencies]
winres = "0.1.11"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "todos-app"
path = "src/main.rs"
