[package]
name = "todos-app"
version = "1.1.0"
description = "Handy TODOs app!"
authors = [ "Parker McMullin <parker.mcmullin01@gmail.com>" ]
license = ""
repository = ""
default-run = "todos-app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.0" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "dev", features = ["api-all"] }
uuid = "0.8.2"
chrono = { version = "0.4.19", features = ["serde"] }
jfs = "0.6.2"
derive_builder = "0.10.2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[patch.crates-io]
tao = { git = "https://github.com/tauri-apps/tao", rev = "01fc43b05ea41463d512c0e3497971edc543ac9d" }
